--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto final del Taller de Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "api",
