--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "recursoshumanos",
+  "name": "proyectosc",
   "version": "1.0.0",
   "description": "Proyecto final del Taller de Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [
     "api",
